src/core/lispParse.output
Terminals which are not used

   lOpenBrace
   lCloseBrace
   lNil


Grammar

    0 $accept: input $end

    1 input: codeBlock
    2      | error
    3      | /* empty */

    4 codeBlock: statement
    5          | statement codeBlock

    6 statement: unbracketedStatement
    7          | bracketedStatement lEol
    8          | bracketedStatement lEol lIndent codeBlock lDedent
    9          | unbracketedStatement lIndent codeBlock lDedent

   10 unbracketedStatement: atom list lEol
   11                     | atom lEol

   12 bracketedStatement: lOpenPrefixForm list lClosePrefixForm
   13                   | lOpenPrefixForm lClosePrefixForm
   14                   | lOpenInfixForm entry entry list lCloseInfixForm
   15                   | lOpenInfixForm entry entry lCloseInfixForm
   16                   | lOpenInfixForm entry lCloseInfixForm

   17 list: entry
   18     | entry list

   19 entry: atom
   20      | quotedSymbol
   21      | bracketedStatement
   22      | quotedBracketedList
   23      | keyValuePair

   24 keyValuePair: lKeyedName entry

   25 quotedSymbol: lQuoteChar lSymbol

   26 quotedBracketedList: lQuoteChar bracketedStatement

   27 atom: lSymbol
   28     | lInteger
   29     | lLongLongInteger
   30     | lDouble
   31     | lString
   32     | lReturn
   33     | lIf
   34     | lIfTrue
   35     | lIfFalse
   36     | lCond
   37     | lLambda
   38     | lProgn
   39     | lForEach
   40     | lWhile
   41     | lInvoke
   42     | lQuote
   43     | lSetGlobal
   44     | lLet
   45     | lDefineClass
   46     | lDefineFunction
   47     | lMacro
   48     | lDefineMethod
   49     | lPrognDebug
   50     | lPrognLog
   51     | lAssert
   52     | lLog
   53     | lBreak
   54     | lContinue
   55     | lRaise
   56     | lTrue
   57     | lFalse


Terminals, with rules where they appear

$end (0) 0
error (256) 2
lEol (258) 7 8 10 11
lIndent (259) 8 9
lDedent (260) 8 9
lOpenBrace (261)
lCloseBrace (262)
lOpenInfixForm (263) 14 15 16
lCloseInfixForm (264) 14 15 16
lOpenPrefixForm (265) 12 13
lClosePrefixForm (266) 12 13
lQuote (267) 42
lIf (268) 33
lIfTrue (269) 34
lIfFalse (270) 35
lCond (271) 36
lLambda (272) 37
lWhile (273) 40
lInvoke (274) 41
lForEach (275) 39
lProgn (276) 38
lSetGlobal (277) 43
lLet (278) 44
lDefineClass (279) 45
lDefineMethod (280) 48
lMacro (281) 47
lDefineFunction (282) 46
lQuoteChar (283) 25 26
lTrue (284) 56
lFalse (285) 57
lNil (286)
lPrognDebug (287) 49
lPrognLog (288) 50
lAssert (289) 51
lReturn (290) 32
lBreak (291) 53
lContinue (292) 54
lRaise (293) 55
lLog (294) 52
lSymbol (295) 25 27
lKeyedName (296) 24
lInteger (297) 28
lLongLongInteger (298) 29
lDouble (299) 30
lString (300) 31


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
input (47)
    on left: 1 2 3, on right: 0
codeBlock (48)
    on left: 4 5, on right: 1 5 8 9
statement (49)
    on left: 6 7 8 9, on right: 4 5
unbracketedStatement (50)
    on left: 10 11, on right: 6 9
bracketedStatement (51)
    on left: 12 13 14 15 16, on right: 7 8 21 26
list (52)
    on left: 17 18, on right: 10 12 14 18
entry (53)
    on left: 19 20 21 22 23, on right: 14 15 16 17 18 24
keyValuePair (54)
    on left: 24, on right: 23
quotedSymbol (55)
    on left: 25, on right: 20
quotedBracketedList (56)
    on left: 26, on right: 22
atom (57)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 57, on right: 10 11 19


state 0

    0 $accept: . input $end

    error             shift, and go to state 1
    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    $end  reduce using rule 3 (input)

    input                 go to state 35
    codeBlock             go to state 36
    statement             go to state 37
    unbracketedStatement  go to state 38
    bracketedStatement    go to state 39
    atom                  go to state 40


state 1

    2 input: error .

    $default  reduce using rule 2 (input)


state 2

   14 bracketedStatement: lOpenInfixForm . entry entry list lCloseInfixForm
   15                   | lOpenInfixForm . entry entry lCloseInfixForm
   16                   | lOpenInfixForm . entry lCloseInfixForm

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    entry                go to state 44
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 3

   12 bracketedStatement: lOpenPrefixForm . list lClosePrefixForm
   13                   | lOpenPrefixForm . lClosePrefixForm

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lClosePrefixForm  shift, and go to state 49
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    list                 go to state 50
    entry                go to state 51
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 4

   42 atom: lQuote .

    $default  reduce using rule 42 (atom)


state 5

   33 atom: lIf .

    $default  reduce using rule 33 (atom)


state 6

   34 atom: lIfTrue .

    $default  reduce using rule 34 (atom)


state 7

   35 atom: lIfFalse .

    $default  reduce using rule 35 (atom)


state 8

   36 atom: lCond .

    $default  reduce using rule 36 (atom)


state 9

   37 atom: lLambda .

    $default  reduce using rule 37 (atom)


state 10

   40 atom: lWhile .

    $default  reduce using rule 40 (atom)


state 11

   41 atom: lInvoke .

    $default  reduce using rule 41 (atom)


state 12

   39 atom: lForEach .

    $default  reduce using rule 39 (atom)


state 13

   38 atom: lProgn .

    $default  reduce using rule 38 (atom)


state 14

   43 atom: lSetGlobal .

    $default  reduce using rule 43 (atom)


state 15

   44 atom: lLet .

    $default  reduce using rule 44 (atom)


state 16

   45 atom: lDefineClass .

    $default  reduce using rule 45 (atom)


state 17

   48 atom: lDefineMethod .

    $default  reduce using rule 48 (atom)


state 18

   47 atom: lMacro .

    $default  reduce using rule 47 (atom)


state 19

   46 atom: lDefineFunction .

    $default  reduce using rule 46 (atom)


state 20

   56 atom: lTrue .

    $default  reduce using rule 56 (atom)


state 21

   57 atom: lFalse .

    $default  reduce using rule 57 (atom)


state 22

   49 atom: lPrognDebug .

    $default  reduce using rule 49 (atom)


state 23

   50 atom: lPrognLog .

    $default  reduce using rule 50 (atom)


state 24

   51 atom: lAssert .

    $default  reduce using rule 51 (atom)


state 25

   32 atom: lReturn .

    $default  reduce using rule 32 (atom)


state 26

   53 atom: lBreak .

    $default  reduce using rule 53 (atom)


state 27

   54 atom: lContinue .

    $default  reduce using rule 54 (atom)


state 28

   55 atom: lRaise .

    $default  reduce using rule 55 (atom)


state 29

   52 atom: lLog .

    $default  reduce using rule 52 (atom)


state 30

   27 atom: lSymbol .

    $default  reduce using rule 27 (atom)


state 31

   28 atom: lInteger .

    $default  reduce using rule 28 (atom)


state 32

   29 atom: lLongLongInteger .

    $default  reduce using rule 29 (atom)


state 33

   30 atom: lDouble .

    $default  reduce using rule 30 (atom)


state 34

   31 atom: lString .

    $default  reduce using rule 31 (atom)


state 35

    0 $accept: input . $end

    $end  shift, and go to state 52


state 36

    1 input: codeBlock .

    $default  reduce using rule 1 (input)


state 37

    4 codeBlock: statement .
    5          | statement . codeBlock

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    $default  reduce using rule 4 (codeBlock)

    codeBlock             go to state 53
    statement             go to state 37
    unbracketedStatement  go to state 38
    bracketedStatement    go to state 39
    atom                  go to state 40


state 38

    6 statement: unbracketedStatement .
    9          | unbracketedStatement . lIndent codeBlock lDedent

    lIndent  shift, and go to state 54

    $default  reduce using rule 6 (statement)


state 39

    7 statement: bracketedStatement . lEol
    8          | bracketedStatement . lEol lIndent codeBlock lDedent

    lEol  shift, and go to state 55


state 40

   10 unbracketedStatement: atom . list lEol
   11                     | atom . lEol

    lEol              shift, and go to state 56
    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    list                 go to state 57
    entry                go to state 51
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 41

   25 quotedSymbol: lQuoteChar . lSymbol
   26 quotedBracketedList: lQuoteChar . bracketedStatement

    lOpenInfixForm   shift, and go to state 2
    lOpenPrefixForm  shift, and go to state 3
    lSymbol          shift, and go to state 58

    bracketedStatement  go to state 59


state 42

   24 keyValuePair: lKeyedName . entry

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    entry                go to state 60
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 43

   21 entry: bracketedStatement .

    $default  reduce using rule 21 (entry)


state 44

   14 bracketedStatement: lOpenInfixForm entry . entry list lCloseInfixForm
   15                   | lOpenInfixForm entry . entry lCloseInfixForm
   16                   | lOpenInfixForm entry . lCloseInfixForm

    lOpenInfixForm    shift, and go to state 2
    lCloseInfixForm   shift, and go to state 61
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    entry                go to state 62
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 45

   23 entry: keyValuePair .

    $default  reduce using rule 23 (entry)


state 46

   20 entry: quotedSymbol .

    $default  reduce using rule 20 (entry)


state 47

   22 entry: quotedBracketedList .

    $default  reduce using rule 22 (entry)


state 48

   19 entry: atom .

    $default  reduce using rule 19 (entry)


state 49

   13 bracketedStatement: lOpenPrefixForm lClosePrefixForm .

    $default  reduce using rule 13 (bracketedStatement)


state 50

   12 bracketedStatement: lOpenPrefixForm list . lClosePrefixForm

    lClosePrefixForm  shift, and go to state 63


state 51

   17 list: entry .
   18     | entry . list

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    $default  reduce using rule 17 (list)

    bracketedStatement   go to state 43
    list                 go to state 64
    entry                go to state 51
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 52

    0 $accept: input $end .

    $default  accept


state 53

    5 codeBlock: statement codeBlock .

    $default  reduce using rule 5 (codeBlock)


state 54

    9 statement: unbracketedStatement lIndent . codeBlock lDedent

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    codeBlock             go to state 65
    statement             go to state 37
    unbracketedStatement  go to state 38
    bracketedStatement    go to state 39
    atom                  go to state 40


state 55

    7 statement: bracketedStatement lEol .
    8          | bracketedStatement lEol . lIndent codeBlock lDedent

    lIndent  shift, and go to state 66

    $default  reduce using rule 7 (statement)


state 56

   11 unbracketedStatement: atom lEol .

    $default  reduce using rule 11 (unbracketedStatement)


state 57

   10 unbracketedStatement: atom list . lEol

    lEol  shift, and go to state 67


state 58

   25 quotedSymbol: lQuoteChar lSymbol .

    $default  reduce using rule 25 (quotedSymbol)


state 59

   26 quotedBracketedList: lQuoteChar bracketedStatement .

    $default  reduce using rule 26 (quotedBracketedList)


state 60

   24 keyValuePair: lKeyedName entry .

    $default  reduce using rule 24 (keyValuePair)


state 61

   16 bracketedStatement: lOpenInfixForm entry lCloseInfixForm .

    $default  reduce using rule 16 (bracketedStatement)


state 62

   14 bracketedStatement: lOpenInfixForm entry entry . list lCloseInfixForm
   15                   | lOpenInfixForm entry entry . lCloseInfixForm

    lOpenInfixForm    shift, and go to state 2
    lCloseInfixForm   shift, and go to state 68
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lQuoteChar        shift, and go to state 41
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lKeyedName        shift, and go to state 42
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    bracketedStatement   go to state 43
    list                 go to state 69
    entry                go to state 51
    keyValuePair         go to state 45
    quotedSymbol         go to state 46
    quotedBracketedList  go to state 47
    atom                 go to state 48


state 63

   12 bracketedStatement: lOpenPrefixForm list lClosePrefixForm .

    $default  reduce using rule 12 (bracketedStatement)


state 64

   18 list: entry list .

    $default  reduce using rule 18 (list)


state 65

    9 statement: unbracketedStatement lIndent codeBlock . lDedent

    lDedent  shift, and go to state 70


state 66

    8 statement: bracketedStatement lEol lIndent . codeBlock lDedent

    lOpenInfixForm    shift, and go to state 2
    lOpenPrefixForm   shift, and go to state 3
    lQuote            shift, and go to state 4
    lIf               shift, and go to state 5
    lIfTrue           shift, and go to state 6
    lIfFalse          shift, and go to state 7
    lCond             shift, and go to state 8
    lLambda           shift, and go to state 9
    lWhile            shift, and go to state 10
    lInvoke           shift, and go to state 11
    lForEach          shift, and go to state 12
    lProgn            shift, and go to state 13
    lSetGlobal        shift, and go to state 14
    lLet              shift, and go to state 15
    lDefineClass      shift, and go to state 16
    lDefineMethod     shift, and go to state 17
    lMacro            shift, and go to state 18
    lDefineFunction   shift, and go to state 19
    lTrue             shift, and go to state 20
    lFalse            shift, and go to state 21
    lPrognDebug       shift, and go to state 22
    lPrognLog         shift, and go to state 23
    lAssert           shift, and go to state 24
    lReturn           shift, and go to state 25
    lBreak            shift, and go to state 26
    lContinue         shift, and go to state 27
    lRaise            shift, and go to state 28
    lLog              shift, and go to state 29
    lSymbol           shift, and go to state 30
    lInteger          shift, and go to state 31
    lLongLongInteger  shift, and go to state 32
    lDouble           shift, and go to state 33
    lString           shift, and go to state 34

    codeBlock             go to state 71
    statement             go to state 37
    unbracketedStatement  go to state 38
    bracketedStatement    go to state 39
    atom                  go to state 40


state 67

   10 unbracketedStatement: atom list lEol .

    $default  reduce using rule 10 (unbracketedStatement)


state 68

   15 bracketedStatement: lOpenInfixForm entry entry lCloseInfixForm .

    $default  reduce using rule 15 (bracketedStatement)


state 69

   14 bracketedStatement: lOpenInfixForm entry entry list . lCloseInfixForm

    lCloseInfixForm  shift, and go to state 72


state 70

    9 statement: unbracketedStatement lIndent codeBlock lDedent .

    $default  reduce using rule 9 (statement)


state 71

    8 statement: bracketedStatement lEol lIndent codeBlock . lDedent

    lDedent  shift, and go to state 73


state 72

   14 bracketedStatement: lOpenInfixForm entry entry list lCloseInfixForm .

    $default  reduce using rule 14 (bracketedStatement)


state 73

    8 statement: bracketedStatement lEol lIndent codeBlock lDedent .

    $default  reduce using rule 8 (statement)
